--- a/inicio11.html
+++ b/inicio11.html
@@ -95,70 +95,70 @@
     <div class="carousel carousel-slider center">
       <!-- Slide 1 -->
       <div class="carousel-item indigo white-text">
-        <img src="imagenes/IA.jpg" alt="Inteligencia Artificial" class="responsive-img">
+        <img src="Imagenes/IA.jpg" alt="Inteligencia Artificial" class="responsive-img">
         <h5>Inteligencia Artificial</h5>
         <p>Automatización inteligente para transformar industrias.</p>
       </div>
 
       <!-- Slide 2 -->
       <div class="carousel-item deep-purple white-text">
-        <img src="imagenes/blockchain.jpg" alt="Blockchain" class="responsive-img">
+        <img src="Imagenes/blockchain.jpg" alt="Blockchain" class="responsive-img">
         <h5>Blockchain</h5>
         <p>Seguridad y transparencia en la era digital.</p>
       </div>
 
       <!-- Slide 3 -->
       <div class="carousel-item teal white-text">
-        <img src="imagenes/IoT.jpg" alt="Internet de las Cosas" class="responsive-img">
+        <img src="Imagenes/IoT.jpg" alt="Internet de las Cosas" class="responsive-img">
         <h5>Internet de las Cosas</h5>
         <p>Conectividad inteligente para un mundo interconectado.</p>
       </div>
 
       <!-- Slide 4 -->
       <div class="carousel-item amber black-text">
-        <img src="imagenes/realidadvirtual.jpg" alt="Realidad Virtual" class="responsive-img">
+        <img src="Imagenes/realidadvirtual.jpg" alt="Realidad Virtual" class="responsive-img">
         <h5>Realidad Virtual</h5>
         <p>Simulación inmersiva para entrenar, explorar y crear sin límites físicos.</p>
       </div>
 
       <!-- Slide 5 -->
       <div class="carousel-item lime black-text">
-        <img src="imagenes/realidadaumentada.jpg" alt="Realidad Aumentada" class="responsive-img">
+        <img src="Imagenes/realidadaumentada.jpg" alt="Realidad Aumentada" class="responsive-img">
         <h5>Realidad Aumentada</h5>
         <p>Elementos digitales que enriquecen la percepción del mundo real.</p>
       </div>
 
       <!-- Slide 6 -->
       <div class="carousel-item indigo white-text">
-        <img src="imagenes/machinelearning.jpg" alt="Machine Learning" class="responsive-img">
+        <img src="Imagenes/machinelearning.jpg" alt="Machine Learning" class="responsive-img">
         <h5>Machine Learning</h5>
         <p>Algoritmos que aprenden de los datos para tomar decisiones inteligentes en tiempo real.</p>
       </div>
 
       <!-- Slide 7 -->
       <div class="carousel-item red darken-2 white-text">
-        <img src="imagenes/criptografia.png" alt="Criptografía post-cuántica" class="responsive-img">
+        <img src="Imagenes/criptografia.png" alt="Criptografía post-cuántica" class="responsive-img">
         <h5>Criptografía post-cuántica</h5>
         <p>Protección digital frente a futuros ataques cuánticos.</p>
       </div>
 
       <!-- Slide 8 -->
       <div class="carousel-item green darken-2 white-text">
-        <img src="imagenes/impresion3d.webp" alt="Impresión 3D Avanzada" class="responsive-img">
+        <img src="Imagenes/impresion3d.webp" alt="Impresión 3D Avanzada" class="responsive-img">
         <h5>Impresión 3D Avanzada</h5>
         <p>Fabricación precisa y personalizada en múltiples industrias.</p>
       </div>
 
       <!-- Slide 9 -->
       <div class="carousel-item blue-grey white-text">
-        <img src="imagenes/robotica.jpeg" alt="Robótica Avanzada" class="responsive-img">
+        <img src="Imagenes/robotica.jpeg" alt="Robótica Avanzada" class="responsive-img">
         <h5>Robótica Avanzada</h5>
         <p>Máquinas inteligentes que automatizan tareas complejas.</p>
       </div>
 
       <!-- Slide 10 -->
       <div class="carousel-item orange darken-3 white-text">
-        <img src="imagenes/edgecomputing.png" alt="Edge Computing" class="responsive-img">
+        <img src="Imagenes/edgecomputing.png" alt="Edge Computing" class="responsive-img">
         <h5>Edge Computing</h5>
         <p>Procesamiento rápido y seguro cerca del origen de los datos.</p>
       </div>
@@ -209,7 +209,7 @@
           <div class="col s12 m6 l3">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Michelle.jpg" alt="Foto Michelle Arguello"
+                <img src="Imagenes/Michelle.jpg" alt="Foto Michelle Arguello"
                   style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
@@ -226,7 +226,7 @@
           <div class="col s12 m6 l3">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Oriana.jpg" alt="Foto Oriana Barcia" style="height: 250px; object-fit: contain;">
+                <img src="Imagenes/Oriana.jpg" alt="Foto Oriana Barcia" style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
                 <span class="card-title blue-text text-darken-2">Oriana Valentina Barcia Mantuano</span>
@@ -242,7 +242,7 @@
           <div class="col s12 m6 l3">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Jhon.jpg" alt="Foto John Carrillo" style="height: 250px; object-fit: contain;">
+                <img src="Imagenes/Jhon.jpg" alt="Foto John Carrillo" style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
                 <span class="card-title blue-text text-darken-2">Jhon Jairo Carrillo Baduy</span>
@@ -258,7 +258,7 @@
           <div class="col s12 m6 l3">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Axel.jpg" alt="Foto Axel Montesdeoca" style="height: 250px; object-fit: contain;">
+                <img src="Imagenes/Axel.jpg" alt="Foto Axel Montesdeoca" style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
                 <span class="card-title blue-text text-darken-2">Axel Ricardo Montesdeoca Tafur</span>
@@ -276,7 +276,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Justin.jpg" alt="Foto Justin Pérez" style="height: 250px; object-fit: contain;">
+                <img src="Imagenes/Justin.jpg" alt="Foto Justin Pérez" style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
                 <span class="card-title blue-text text-darken-2">Justin David Pérez Barros</span>
@@ -292,7 +292,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Maria.jpg" alt="Foto Maria Quijije" style="height: 250px; object-fit: contain;">
+                <img src="Imagenes/Maria.jpg" alt="Foto Maria Quijije" style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
                 <span class="card-title blue-text text-darken-2">María De Los Ángeles Quijije Cabrera</span>
@@ -308,7 +308,7 @@
           <div class="col s12 m6 l4">
             <div class="card">
               <div class="card-image">
-                <img src="imagenes/Miriel.jpg" alt="Foto Miriel Tello" style="height: 250px; object-fit: contain;">
+                <img src="Imagenes/Miriel.jpg" alt="Foto Miriel Tello" style="height: 250px; object-fit: contain;">
               </div>
               <div class="card-content">
                 <span class="card-title blue-text text-darken-2">Miriel Alexandra Tello Bermúdez</span>
