--- a/realidadvirtual.html
+++ b/realidadvirtual.html
@@ -115,7 +115,7 @@
   <div class="row">
     <!-- Imagen 1 -->
     <div class="col s12 m6">
-      <img src="imagenes/vr.jpeg" 
+      <img src="Imagenes/vr.jpeg" 
            alt="VR" 
            class="responsive-img z-depth-2"
            style="height: 300px; width: 100%; object-fit: cover; border-radius: 10px;">
@@ -123,7 +123,7 @@
 
     <!-- Imagen 2 -->
     <div class="col s12 m6">
-      <img src="imagenes/ar2.jpeg" 
+      <img src="Imagenes/ar2.jpeg" 
            alt="AR" 
            class="responsive-img z-depth-2"
            style="height: 300px; width: 100%; object-fit: cover; border-radius: 10px;">
