--- a/blockchain.html
+++ b/blockchain.html
@@ -139,7 +139,7 @@
               </p>
         </div>
         <div class="col s12 m6 center-align fade-in fade-in-right">
-          <img alt="Explicación de hash" class="responsive-img materialboxed section-img" src="imagenes/hash.webp"/>
+          <img alt="Explicación de hash" class="responsive-img materialboxed section-img" src="Imagenes/hash.webp"/>
         </div>
       </div>
     </section>
