--- a/machinelearning.html
+++ b/machinelearning.html
@@ -41,7 +41,7 @@
     <div class="navbar-fixed">
       <nav class="indigo darken-4">
         <div class="nav-wrapper container">
-         <a class="brand-logo" href="inicio11.html">
+         <a class="brand-logo" href="inicio11.html" style="font-size: 1.5rem; margin-left: 2rem; font-weight: 500; color: white; text-decoration: none;">
             <span style="white-space: nowrap;">Tecnologías Emergentes</span>
           </a>
           <a class="sidenav-trigger" data-target="mobile-demo" href="#"><i class="material-icons">menu</i></a>
